# WriterMD

./: AGENTS.md  README.md  Trunk.toml
.github/workflows/: release.yml
scripts/: patch-appimage-arch-runtime.sh  setup-appimage-arch.sh  verify-appimage-arch-runtime.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: Cargo.toml  index.html
src-ui/public/scss/: main.scss
src-ui/src/: lib.rs  main.rs  wysiwym.rs
