[package]
name = "writermd"
version = "0.2.0"
description = "A Tauri App"
authors = ["James David Clarke <james@jamesdavidclarke.com>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/JamesClarke7283/WriterMD"
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.1", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
langchain-rust = "4"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
similar = "2.7.0"
async-trait = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
