[package]
name = "writermd_ui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
console_log = "1.0"
log = "0.4"
console_error_panic_hook = "0.1"

serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6"
tauri-wasm = { git = "https://github.com/p1mo/tauri-wasm", rev = "3f62627e4192003d64a36d4845bb81be96799234", features = [
  "all",        # for all api bindings
  "plugin-all", # for all plugin bindings. should you do this? no.
] }

futures = "0.3"
web-sys = { version = "0.3", features = ["Document", "DomRect", "Element", "HtmlElement", "HtmlTextAreaElement", "Window", "Selection", "Range", "Node", "NodeList"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
regex = "1.12.3"
pulldown-cmark = "0.13.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
leptosfmt = "0.1"
